--- a/public/index.html
+++ b/public/index.html
@@ -4,247 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vimeo Video Downloader</title>
+
+    <!-- Axios CDN -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <style>
-      :root {
-        --primary: #1ab7ea;
-        --primary-dark: #0d9bc5;
-        --secondary: #ddd;
-        --light: #f5f5f5;
-        --dark: #121212;
-        --darker: #0a0a0a;
-        --success: #4caf50;
-        --error: #f44336;
-        --card-bg: rgba(30, 30, 40, 0.7);
-        --card-border: rgba(255, 255, 255, 0.1);
-      }
 
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-
-      body {
-        background: linear-gradient(135deg, #1a2a6c, #b21f1f, #1a2a6c);
-        color: var(--light);
-        min-height: 100vh;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .container {
-        background: rgba(10, 10, 15, 0.95);
-        border-radius: 16px;
-        box-shadow: 0 12px 40px rgba(0, 0, 0, 0.5);
-        padding: 30px;
-        width: 100%;
-        max-width: 800px;
-        backdrop-filter: blur(10px);
-        border: 1px solid var(--card-border);
-      }
-
-      header {
-        text-align: center;
-        margin-bottom: 30px;
-        padding-bottom: 20px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      h1 {
-        font-size: 2.8rem;
-        margin-bottom: 10px;
-        background: linear-gradient(90deg, var(--primary), #ffffff);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-      }
-
-      .subtitle {
-        color: #bbb;
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-        line-height: 1.6;
-      }
-
-      .card {
-        background: var(--card-bg);
-        border-radius: 12px;
-        padding: 25px;
-        margin-bottom: 25px;
-        box-shadow: 0 6px 25px rgba(0, 0, 0, 0.3);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        border: 1px solid var(--card-border);
-      }
-
-      .card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 12px 35px rgba(0, 0, 0, 0.4);
-      }
-
-      .input-group {
-        margin-bottom: 20px;
-      }
-
-      label {
-        display: block;
-        margin-bottom: 8px;
-        font-weight: 600;
-        color: #ddd;
-        font-size: 1.1rem;
-      }
-
-      input {
-        width: 100%;
-        padding: 15px;
-        border-radius: 10px;
-        border: 2px solid rgba(255, 255, 255, 0.15);
-        background: rgba(20, 20, 30, 0.9);
-        color: white;
-        font-size: 16px;
-        transition: all 0.3s;
-      }
-
-      input:focus {
-        outline: none;
-        border-color: var(--primary);
-        box-shadow: 0 0 0 3px rgba(26, 183, 234, 0.3);
-      }
-
-      .btn {
-        background: var(--primary);
-        color: white;
-        border: none;
-        padding: 16px 28px;
-        font-size: 18px;
-        font-weight: 600;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        box-shadow: 0 4px 15px rgba(26, 183, 234, 0.3);
-      }
-
-      .btn:hover {
-        background: var(--primary-dark);
-        transform: translateY(-3px);
-        box-shadow: 0 6px 20px rgba(26, 183, 234, 0.4);
-      }
-
-      .btn:disabled {
-        background: #555;
-        cursor: not-allowed;
-        transform: none;
-        box-shadow: none;
-        opacity: 0.7;
-      }
-
-      .btn-full {
-        width: 100%;
-      }
-
-      .progress-container {
-        margin: 30px 0;
-        display: none;
-      }
-
-      .progress-bar {
-        height: 14px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 7px;
-        overflow: hidden;
-        box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
-      }
-
-      .progress-fill {
-        height: 100%;
-        background: linear-gradient(90deg, var(--primary), #4db6e8);
-        border-radius: 7px;
-        width: 0%;
-        transition: width 0.3s ease;
-        box-shadow: 0 0 10px rgba(77, 182, 232, 0.5);
-      }
-
-      .progress-text {
-        text-align: center;
-        margin-top: 12px;
-        font-size: 16px;
-        color: #bbb;
-        font-weight: 500;
-      }
-
-      .status {
-        padding: 18px;
-        border-radius: 10px;
-        margin: 20px 0;
-        text-align: center;
-        font-weight: 500;
-        display: none;
-        font-size: 16px;
-      }
-
-      .status.success {
-        background: rgba(76, 175, 80, 0.2);
-        border: 1px solid var(--success);
-        color: #a5d6a7;
-        display: block;
-      }
-
-      .status.error {
-        background: rgba(244, 67, 54, 0.2);
-        border: 1px solid var(--error);
-        color: #ef9a9a;
-        display: block;
-      }
-
-      .status.info {
-        background: rgba(26, 183, 234, 0.2);
-        border: 1px solid var(--primary);
-        color: #81d4fa;
-        display: block;
-      }
-
-      .loader {
-        display: inline-block;
-        width: 26px;
-        height: 26px;
-        border: 3px solid rgba(255, 255, 255, 0.3);
-        border-radius: 50%;
-        border-top-color: white;
-        animation: spin 1s ease-in-out infinite;
-      }
-
-      @keyframes spin {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        color: #777;
-        font-size: 15px;
-        padding-top: 20px;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      @media (max-width: 650px) {
-        .container {
-          padding: 20px;
-        }
-
-        h1 {
-          font-size: 2.2rem;
-        }
-      }
-    </style>
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -291,138 +56,13 @@
       <footer>
         <p>
           Only download videos you have permission to access. Respect copyright
-          laws and Vimeo’s Terms of Service.
+          laws and Vimeo's Terms of Service.
         </p>
         <p>Educational purposes only | Built with Node.js & FFmpeg</p>
       </footer>
     </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const vimeoUrlInput = document.getElementById("vimeoUrl");
-        const downloadBtn = document.getElementById("downloadBtn");
-        const downloadBtnText = document.getElementById("downloadBtnText");
-        const statusDiv = document.getElementById("status");
-        const progressContainer = document.getElementById("progressContainer");
-        const progressFill = document.getElementById("progressFill");
-        const progressText = document.getElementById("progressText");
-
-        let ws = null;
-
-        function showStatus(message, type) {
-          statusDiv.textContent = message;
-          statusDiv.className = `status ${type}`;
-          statusDiv.style.display = "block";
-        }
-
-        function hideStatus() {
-          statusDiv.style.display = "none";
-        }
-
-        function connectWebSocket() {
-          const wsUrl = `ws://${location.host}`;
-          console.log("▶️ Connecting to WebSocket at", wsUrl);
-          ws = new WebSocket(wsUrl);
-
-          ws.onopen = () => {
-            console.log("✅ WebSocket connected.");
-          };
-          ws.onclose = () => {
-            console.warn("⚠️ WebSocket closed, retrying in 3s…");
-            setTimeout(connectWebSocket, 3000);
-          };
-          ws.onerror = (err) => {
-            console.error("❌ WebSocket error:", err);
-          };
-          ws.onmessage = (event) => {
-            const data = JSON.parse(event.data);
-            console.log("📩 WS message:", data);
-            handleProgressUpdate(data);
-          };
-        }
-
-        function handleProgressUpdate(data) {
-          switch (data.type) {
-            case "progress":
-              updateProgress(data.percentage, data.status);
-              break;
-            case "complete":
-              showStatus(
-                "🎉 Download complete. Now uploading to Google Drive…",
-                "info"
-              );
-              break;
-            case "error":
-              showStatus("❌ Error: " + data.message, "error");
-              resetUI();
-              break;
-            case "gdrive_upload_complete":
-              showStatus(
-                "✔︎ Uploaded to Google Drive: " + data.file,
-                "success"
-              );
-              resetUI();
-              break;
-            default:
-              console.warn("ℹ️ Unknown WS message type:", data.type);
-          }
-        }
-
-        function updateProgress(percent, status) {
-          progressContainer.style.display = "block";
-          progressFill.style.width = `${percent}%`;
-          progressText.textContent = `${status} – ${percent}%`;
-        }
-
-        function resetUI() {
-          downloadBtn.disabled = false;
-          downloadBtnText.innerHTML = "Download Video";
-          progressContainer.style.display = "none";
-          progressFill.style.width = "0%";
-          hideStatus();
-        }
-
-        downloadBtn.addEventListener("click", async () => {
-          const vimeoUrl = vimeoUrlInput.value.trim();
-          if (!vimeoUrl) {
-            showStatus("⚠️ Please enter a valid Vimeo URL", "error");
-            return;
-          }
-
-          downloadBtn.disabled = true;
-          downloadBtnText.innerHTML = '<span class="loader"></span> Starting…';
-          showStatus("🟢 Download initiated…", "info");
-
-          try {
-            // Ensure WebSocket is connected
-            if (!ws || ws.readyState === WebSocket.CLOSED) {
-              connectWebSocket();
-            }
-
-            const response = await axios.post("/api/download", {
-              vimeoUrl,
-            });
-            if (response.status === 200) {
-              showStatus(
-                "🚀 Server has started processing your request.",
-                "info"
-              );
-            } else {
-              throw new Error("Server error: " + response.statusText);
-            }
-          } catch (err) {
-            console.error("🔴 /api/download error:", err);
-            showStatus(
-              "❌ " + (err.response?.data?.error || err.message),
-              "error"
-            );
-            resetUI();
-          }
-        });
-
-        // Kick off the first WebSocket connection
-        connectWebSocket();
-      });
-    </script>
+    <!-- External JavaScript -->
+    <script src="script.js"></script>
   </body>
 </html>
